tests/compile_fail/non_string.stderr
error: expected string literal
 --> tests/compile_fail/non_string.rs:5:33
  |
5 |     let _: &str = include_docs!(123);
  |                                 ^^^
